# zed-extension-conl

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.MIT  README.md  extension.toml
grammars/: conl.wasm
languages/conl/: config.toml  highlights.scm  injections.scm  outline.scm
src/: conl.rs
