[package]
name = "zed_conl"
version = "0.0.1"
license = "MIT"
edition = "2024"

[lib]
path = "src/conl.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

